# jigsaw-puzzle-solver

./: Cargo.toml  README.md
src/: average_color.rs  border_matcher.rs  borders_graph.rs  coordinate_system.rs  crop.rs  dsu.rs  edge_score_optimizer.rs  figure.rs  graph_solver.rs  interactive_solutions_picker.rs  known_facts.rs  known_positions.rs  main.rs  matcher_tests.rs  my_widget.rs  parsed_puzzles.rs  placement.rs  point.rs  positions_cache.rs  rects_fitter.rs  search_states_cache.rs  surface_placer.rs  topn.rs  utils.rs
