[package]
name = "jigsaw-puzzle-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

eframe = "0.19.0"
egui_extras = { features = ["svg"] }
image = "0.24.4"
rand = "0.8.5"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15.6"

[profile.release]
debug = 1
